--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<app-toast></app-toast>
+<!-- <app-toast></app-toast>
 <app-movies></app-movies>
+ -->
+<div>
+    
+    <app-nav-bar></app-nav-bar>
+    <app-toast></app-toast>
+    <router-outlet></router-outlet>
 
+    <!-- <app-main-content></app-main-content> -->
+    
+    
+
+</div>
