--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,3 +1,10 @@
+.row-one {
+    background-color: black;
+}
+
+.btn-outline-success {
+    margin: 10px;
+}
 
 .main-top {
     display: none;
@@ -12,6 +19,10 @@
 }
 
 .spacing {
+    margin: 10px;
+}
+
+.btn-success {
     margin: 10px;
 }
 
