--- a/src/app/requests/requests.component.css
+++ b/src/app/requests/requests.component.css
@@ -1,3 +1,8 @@
+.btn-outline-success {
+    margin: 10px;
+}
+
+
 
 .main-top {
     display: none;
@@ -12,6 +17,10 @@
 }
 
 .spacing {
+    margin: 10px;
+}
+
+.btn-success {
     margin: 10px;
 }
 
@@ -30,6 +39,14 @@
     margin: 20px auto;
     width: 90%;
     
+}
+
+.top-container {
+   
+}
+
+.list-container {
+ 
 }
 
 .right-hook {
